--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>hichat</title>
         <link rel="stylesheet" href="./public/css/style.css">
-        <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-        <link rel="icon" href="favicon.ico" type="image/x-icon">
+        <!-- <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">  -->
+        <!--  <link rel="icon" href="favicon.ico" type="image/x-icon"> -->
     </head>
     <body>
         <div class="wrapper">
